added a footer to survey.html

--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -95,6 +95,14 @@
     </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p><a href="/api/friends" id="link">API Friends List</a> | <a
+                    href="https://github.com/MagicMan88/FriendFinder" id="link">GitHub Repo</a></p>
+        </div>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
