--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -31,7 +31,8 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)">
+                    <input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)"
+                        required>
                 </div>
                 <br>
                 <div class="form-group">
@@ -91,6 +92,27 @@
                 </div>
                 <br>
             </form>
+            <!-- Submit Button -->
+            <div class="text-center">
+                <button id="submitBtn" type="submit" class="btn btn-success btn-lg">Submit</button>
+            </div>
+            <!-- Modal after survey completion -->
+            <div id="bestFriendModal" class="modal fade" role="alert" dialog>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h3 class="modal-title">Your New Best Friend</h3>
+                    </div>
+                    <div class="modal-body">
+                        <h2 id="bestFriend"></h2>
+                        <img id="bestFriendPhoto" src="#" alt="">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
     </div>
@@ -117,3 +139,49 @@
 </body>
 
 </html>
+
+<script type="text/javascript">
+    $("#submitBtn").on("click", function (event) {
+        event.preventDefault();
+
+        // Form validation
+        var valid = true;
+
+        if ($("#name").val() === "" ||
+            $("#photo").val() === "") {
+            valid = false;
+        } else if ($("#question1").val() === "empty" ||
+            $("#question2").val() === "empty" ||
+            $("#question3").val() === "empty" ||
+            $("#question4").val() === "empty" ||
+            $("#question5").val() === "empty") {
+            valid = false;
+        }
+
+        if (valid === true) {
+            var newUser = {
+                name: $("#name").val().trim(),
+                photo: $("#photo").val().trim(),
+                scores: [
+                    $("#question1").val(),
+                    $("#question2").val(),
+                    $("#question3").val(),
+                    $("#question4").val(),
+                    $("#question5").val(),
+                ]
+            };
+
+            var currentURL = window.location.origin;
+
+            // Ajax call for receiving response after POST req
+            $.post(currentURL + "/api/friends", newUser, function (data) {
+                $("#bestFriend").text(data.name);
+                $("#bestFriendPhoto").attr("src", data.photo);
+                $("#bestFriendModal").modal("toggle");
+            });
+        } else {
+            // If a required field is missing, show alert
+            alert("Survey is incomplete!");
+        }
+    });
+</script>
