fixed a bug regarding where the start survey button was routing too.

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -22,7 +22,7 @@
                     BFF!</p>
                 <hr class="my-2">
                 <p class="lead text-center">
-                    <a class="btn btn-primary btn-lg" href="/survey" role="button">Start Survey</a>
+                    <a class="btn btn-primary btn-lg" href="survey.html" role="button">Start Survey</a>
                 </p>
             </div>
         </div>
