--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -121,7 +121,7 @@
     <footer class="footer">
         <div class="container">
             <p><a href="/api/friends" id="link">API Friends List</a> | <a
-                    href="https://github.com/MagicMan88/FriendFinder" id="link">GitHub Repo</a></p>
+                    href="https://stephengreen88.github.io/FriendFinder/" id="link">GitHub Repo</a></p>
         </div>
     </footer>
 
