Making sure all of the routing is working, tweaking questions on survey.html

--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -36,7 +36,7 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <label for="question1">I love breaking the fourth wall with my audience and mocking superhero
+                    <label for="question1">I love breaking the fourth wall with my audience and mocking superheros
                         movies.</label>
                     <select class="form-control" id="question1">
                         <option value="1">1</option>
@@ -47,7 +47,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="question2">I love breaking the fourth wall with my audience and mocking superhero
+                    <label for="question2">I love Hogwarts School of Witchcraft and Wizardry
                         movies.</label>
                     <select class="form-control" id="question2">
                         <option value="1">1</option>
@@ -58,7 +58,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="question3">I love breaking the fourth wall with my audience and mocking superhero
+                    <label for="question3">I love eating Tacos.
                         movies.</label>
                     <select class="form-control" id="question3">
                         <option value="1">1</option>
@@ -69,7 +69,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="question4">I love breaking the fourth wall with my audience and mocking superhero
+                    <label for="question4">I love beating Tottenham Hotspur and Manchest United.
                         movies.</label>
                     <select class="form-control" id="question4">
                         <option value="1">1</option>
@@ -80,7 +80,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="question5">I love breaking the fourth wall with my audience and mocking superhero
+                    <label for="question5">I love coding, it's the best.
                         movies.</label>
                     <select class="form-control" id="question5">
                         <option value="1">1</option>
